--- a/src/assets/scss/views/setting/Settingcertificateimport.scss
+++ b/src/assets/scss/views/setting/Settingcertificateimport.scss
@@ -1,7 +1,7 @@
 @import '@/assets/scss/components/import/contents-list.scss';
 
-.sub {
-  margin-top: 2px;
-  @include font-size-default(14);
-  color: $color-gray-70;
+.illust {
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
