--- a/src/assets/scss/components/import/faq-list.scss
+++ b/src/assets/scss/components/import/faq-list.scss
@@ -3,7 +3,6 @@
 
   &__list {
     @include reset-list;
-    margin: 0 -20px;
   }
 
   &__item {
@@ -11,10 +10,9 @@
   }
 
   &__head {
+    position: relative;
     display: flex;
-    padding: 16px 20px;
-    align-items: center;
-    box-sizing: border-box;
+    padding: 16px 0;
   }
 
   &__block {
@@ -23,32 +21,48 @@
   }
 
   &__name {
-    display: block;
     @include font-size-default(13);
-    color: $color-black;
     font-weight: 300;
   }
 
   &__title {
-    display: block;
     margin-top: 4px;
     @include font-size-default(16);
-    color: $color-black;
     font-weight: 500;
+  }
+
+  &__right {
+    flex: none;
+    margin-left: auto;
+    padding-left: 4px;
+    display: flex;
+    align-items: center;
   }
 
   &__opener {
     flex: none;
-    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+    position: static;
 
-    &:only-child {
-      margin-left: 0;
+    &::before {
+      padding: 0;
+      top: 0;
+      left: 0;
+      z-index: 10;
     }
+  }
+
+  &__layer {
+    margin-left: -20px;
+    margin-right: -20px;
   }
 
   &__contents {
     padding: 20px;
-    background-color: $color-gray-10;
     box-sizing: border-box;
+    @include font-size-default(14);
+    color: $color-gray-70;
+    background-color: $color-gray-10;
   }
 }
