--- a/src/assets/scss/components/ui/form/SwitchCheckBox.scss
+++ b/src/assets/scss/components/ui/form/SwitchCheckBox.scss
@@ -1,19 +1,21 @@
 .switch-checkbox {
-  font-size: 0;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
 
   &__label {
+    display: block;
     cursor: pointer;
-    display: inline-block;
+  }
+
+  &__object {
+    display: block;
     position: relative;
     width: 44px;
     height: 26px;
     background-color: $color-gray-20;
     border-radius: 50px;
-    font-size: 0;
-    line-height: 0;
-    outline: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-tap-highlight-color: transparent;
+    transition: background-color 0.2s;
 
     &::after {
       content: '';
@@ -24,18 +26,27 @@
       height: 22px;
       background-color: $color-white;
       border-radius: 50%;
-      transition: all 0.3s;
+      transition: transform 0.2s;
     }
   }
+
+  &__text {
+    @include for-a11y;
+  }
+
   &__input {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
 
-    &:checked + label {
-      background-color: $color-navy-50;
-    }
+    &:checked + .switch-checkbox__label {
+      .switch-checkbox__object {
+        background-color: $color-navy-50;
 
-    &:checked + label::after {
-      left: 20px;
+        &::after {
+          transform: translateX(18px);
+        }
+      }
     }
   }
 }
