--- a/src/assets/scss/components/import/basic-table.scss
+++ b/src/assets/scss/components/import/basic-table.scss
@@ -1,60 +1,62 @@
 .basic-table {
-  width: 100%;
   border-top: 1px solid $color-gray-60;
 
-  table {
-    @include basic-table;
-  }
-  thead {
-    th {
-      padding: 8px 15px;
-      border-left: 1px solid $color-gray-30;
-      border-bottom: 1px solid $color-gray-30;
-      word-break: break-all;
-      color: $color-gray-70;
-      font-weight: 400;
-      @include font-size-default(12);
+  > table {
+    @include reset-table;
 
-      &:first-child {
-        border-left: none;
+    > thead {
+      > tr {
+        > th {
+          padding: 7px 0;
+          border-left: 1px solid $color-gray-30;
+          border-bottom: 1px solid $color-gray-30;
+          word-break: break-all;
+          color: $color-gray-70;
+          font-weight: 400;
+          @include font-size-default(12);
+          vertical-align: middle;
+          text-align: center;
+
+          &:first-child {
+            border-left: none;
+          }
+        }
       }
     }
-  }
-  tbody {
-    td {
-      padding: 12px 15px;
-      border-left: 1px solid $color-gray-30;
-      border-bottom: 1px solid $color-gray-30;
-      word-break: break-all;
-      color: $color-black;
-      @include font-size-default(13);
-      vertical-align: middle;
-      text-align: center;
+    > tbody {
+      > tr {
+        > td {
+          padding: 11px 15px;
+          border-left: 1px solid $color-gray-30;
+          border-bottom: 1px solid $color-gray-30;
+          word-break: break-all;
+          @include font-size-default(13);
+          vertical-align: middle;
+          text-align: center;
 
-      &:first-child {
-        border-left: none;
-      }
-
-      &.monthly {
-        width: 120px;
+          &:first-child {
+            border-left: none;
+          }
+        }
       }
     }
-  }
-  tfoot {
-    td {
-      padding: 12px 15px;
-      border-left: 1px solid $color-gray-30;
-      border-bottom: 1px solid $color-gray-30;
-      word-break: break-all;
-      background-color: $color-navy-05;
-      color: $color-black;
-      @include font-size-default(13);
-      font-weight: 500;
-      vertical-align: middle;
-      text-align: center;
+    > tfoot {
+      > tr {
+        > td {
+          padding: 11px 15px;
+          border-left: 1px solid $color-gray-30;
+          border-bottom: 1px solid $color-gray-30;
+          word-break: break-all;
+          background-color: $color-navy-05;
+          @include font-size-default(13);
+          font-weight: 500;
+          vertical-align: middle;
+          text-align: center;
 
-      &:first-child {
-        border-left: none;
+          &:first-child {
+            border-left: none;
+          }
+        }
       }
     }
   }
