--- a/src/assets/scss/components/import/not-table.scss
+++ b/src/assets/scss/components/import/not-table.scss
@@ -1,13 +1,10 @@
 .not-table {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 84px;
   margin: 0;
-  background: $color-gray-05;
+  padding: 32px 0;
+  background-color: $color-gray-05;
   border-radius: 8px;
   color: $color-gray-90;
-  font-weight: 400;
   @include font-size-default(13);
+  font-weight: 300;
+  text-align: center;
 }
