--- a/src/assets/scss/components/ui/form/SwitchCheckBox.scss
+++ b/src/assets/scss/components/ui/form/SwitchCheckBox.scss
@@ -48,5 +48,11 @@
         }
       }
     }
+
+    &[disabled] + .switch-checkbox__label {
+      .switch-checkbox__object {
+        opacity: 0.3;
+      }
+    }
   }
 }
