--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -18,3 +18,4 @@
 @import '@/assets/scss/components/import/search-list.scss';
 @import '@/assets/scss/components/import/faq-list.scss';
 @import '@/assets/scss/components/import/tooltip-section.scss';
+@import '@/assets/scss/components/import/inline-alert.scss';
