컬러값(#3A81E0) 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -154,6 +154,9 @@ body,
 .color-navy.color-navy {
   color: $color-navy-50;
 }
+.color-blue.color-blue {
+  color: $color-blue-50;
+}
 
 // text
 .text-body-1.text-body-1 {
