RoundStatus theme 추가 및 basic-list 고정 너비 스타일 추가

--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -111,4 +111,12 @@
       }
     }
   }
+
+  &--fixed-width {
+    .basic-list {
+      &__symbol {
+        min-width: 23px;
+      }
+    }
+  }
 }
