--- a/src/assets/scss/views/lm-blog/LMBlogLoanCounselingForm.scss
+++ b/src/assets/scss/views/lm-blog/LMBlogLoanCounselingForm.scss
@@ -1,20 +1,17 @@
-@import '@/assets/scss/components/import/section-head.scss';
+@import '@/assets/scss/components/import/basic-table.scss';
 
-.apartment-info {
+.section-regular {
   margin-top: 30px;
 
-  &__head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .margin-left-mini {
+    margin-left: 2px;
   }
+}
 
-  &__left {
-    flex: 1;
-    min-width: 0;
-  }
+.margin-top-small {
+  margin-top: 16px;
+}
 
-  &__right {
-    flex: none;
-  }
+.margin-top-medium {
+  margin-top: 40px;
 }
