Basic Progressbar 컬러 타입 추가

--- a/src/assets/scss/components/ui/progress/BasicProgress.scss
+++ b/src/assets/scss/components/ui/progress/BasicProgress.scss
@@ -17,4 +17,12 @@
       transition: width 0.2s;
     }
   }
+
+  &--color-blue {
+    .progress__bar {
+      &-active {
+        background-color: $color-blue-50;
+      }
+    }
+  }
 }
