BasicBoxHead align props 추가

--- a/src/assets/scss/components/ui/common/BasicBoxHead.scss
+++ b/src/assets/scss/components/ui/common/BasicBoxHead.scss
@@ -14,4 +14,14 @@
     flex: none;
     margin-left: 16px;
   }
+
+  &--align {
+    &-top {
+      align-items: flex-start;
+    }
+
+    &-bottom {
+      align-items: flex-end;
+    }
+  }
 }
