--- a/src/assets/scss/views/myLoan/MyLoanProgress.scss
+++ b/src/assets/scss/views/myLoan/MyLoanProgress.scss
@@ -1,1 +1,3 @@
 @import '@/assets/scss/components/import/division-info.scss';
+@import '@/assets/scss/components/import/inline-alert.scss';
+@import '@/assets/scss/components/import/empty.scss';
