css 오타 수정, BasicBox postiion 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -289,7 +289,7 @@ body,
   @include row-margin-first-last;
 }
 .row-margin-item-small.row-margin-item-small {
-  margin-top: 6x;
+  margin-top: 6px;
   margin-bottom: 6px;
   @include row-margin-first-last;
 }
