--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -19,3 +19,5 @@
 @import '@/assets/scss/components/import/faq-list.scss';
 @import '@/assets/scss/components/import/tooltip-section.scss';
 @import '@/assets/scss/components/import/inline-alert.scss';
+@import '@/assets/scss/components/import/address-list.scss';
+@import '@/assets/scss/components/import/keyword-rank.scss';
