--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -73,6 +73,14 @@ body,
   vertical-align: top;
 }
 
+// contents-wrap
+.contents-wrap {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
 // align-items
 .align-items-start.align-items-start {
   align-items: flex-start;
