--- a/src/assets/scss/components/import/bank-brand.scss
+++ b/src/assets/scss/components/import/bank-brand.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     padding: 10px 14px;
     border-radius: 8px;
@@ -39,7 +39,8 @@
     height: 60px;
     margin: 0 auto 2px;
 
-    svg {
+    svg,
+    img {
       display: block;
       width: 100%;
       height: 100%;
