--- a/src/assets/scss/components/ui/text/KeyValue.scss
+++ b/src/assets/scss/components/ui/text/KeyValue.scss
@@ -58,10 +58,19 @@
     }
   }
 
-  &--margin-regular {
-    .key-value__item {
-      & + .key-value__item {
-        margin-top: 16px;
+  &--margin {
+    &-regular {
+      .key-value__item {
+        & + .key-value__item {
+          margin-top: 16px;
+        }
+      }
+    }
+    &-small {
+      .key-value__item {
+        & + .key-value__item {
+          margin-top: 4px;
+        }
       }
     }
   }
