팝업 작업 중  임시커밋

--- a/src/assets/scss/components/ui/form/DateInput.scss
+++ b/src/assets/scss/components/ui/form/DateInput.scss
@@ -6,4 +6,9 @@
     50% / 24px;
   @include font-size-default(18);
   font-weight: 400;
+
+  &::-webkit-calendar-picker-indicator {
+    background: transparent;
+    z-index: 1;
+  }
 }
