--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -21,3 +21,5 @@
 @import '@/assets/scss/components/import/inline-alert.scss';
 @import '@/assets/scss/components/import/icon-box.scss';
 @import '@/assets/scss/components/import/division-info.scss';
+@import '@/assets/scss/components/import/detail-accordion.scss';
+@import '@/assets/scss/components/import/account-list.scss';
