--- a/src/assets/scss/components/ui/text/KeyValue.scss
+++ b/src/assets/scss/components/ui/text/KeyValue.scss
@@ -66,7 +66,14 @@
         }
       }
     }
-    &-small {
+    &-regular-small {
+      .key-value__item {
+        & + .key-value__item {
+          margin-top: 12px;
+        }
+      }
+    }
+    &-mini {
       .key-value__item {
         & + .key-value__item {
           margin-top: 4px;
@@ -85,13 +92,6 @@
     &-medium {
       .key-value__key {
         width: 60px;
-      }
-    }
-  }
-  &--margin-small {
-    .key-value__item {
-      & + .key-value__item {
-        margin-top: 4px;
       }
     }
   }
