내대출(계약정보) > 상세계약현황 일부 페이지 작업 완료
- 내대출(계약정보) > 상세계약현황 > 결제/청구정보
- 내대출(계약정보) > 상세계약현황 > 정비이력
- 내대출(계약정보) > 상세계약현황 > 지정운전자

--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -23,3 +23,4 @@
 @import '@/assets/scss/components/import/division-info.scss';
 @import '@/assets/scss/components/import/detail-accordion.scss';
 @import '@/assets/scss/components/import/account-list.scss';
+@import '@/assets/scss/components/import/logs.scss';
