--- a/src/assets/scss/views/auto/LayerAutoUsedLoanSearchNumber.scss
+++ b/src/assets/scss/views/auto/LayerAutoUsedLoanSearchNumber.scss
@@ -1,7 +1,11 @@
+@import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/car-image.scss';
 @import '@/assets/scss/components/import/brand-info.scss';
-@import '@/assets/scss/components/import/icon-list.scss';
 
-.illust {
-  padding-bottom: 0;
+.link {
+  padding-left: 8px;
+}
+
+.amount {
+  min-width: 100%;
 }
