--- a/src/assets/scss/views/auto/LayerAutoLongRentalEvaluationFailLimit.scss
+++ b/src/assets/scss/views/auto/LayerAutoLongRentalEvaluationFailLimit.scss
@@ -1,3 +1,6 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
-@import '@/assets/scss/components/import/agree-list.scss';
+
+.illust {
+  padding-bottom: 0;
+}
