--- a/src/assets/scss/views/auto/LayerAutoLongRentalOrder.scss
+++ b/src/assets/scss/views/auto/LayerAutoLongRentalOrder.scss
@@ -1,2 +1,6 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
+
+.illust {
+  padding-bottom: 30px;
+}
