--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -22,5 +22,14 @@
       border-color: $color-gray-05;
       background-color: $color-gray-05;
     }
+
+    &-quinary {
+      padding: 15px;
+    }
+
+    &-senary {
+      border-color: $color-gray-05;
+      background-color: $color-gray-05;
+    }
   }
 }
