--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -95,6 +95,14 @@ body,
     & + & {
       margin-left: 8px;
     }
+
+    & + &--small {
+      margin-left: 4px;
+    }
+
+    & + &--mini {
+      margin-left: 2px;
+    }
   }
 }
 
