--- a/src/assets/scss/components/ui/text/UnitText.scss
+++ b/src/assets/scss/components/ui/text/UnitText.scss
@@ -30,6 +30,10 @@
     justify-content: flex-end;
   }
 
+  &--vertical-align-center {
+    align-items: center;
+  }
+
   &--size-regular {
     .unit-text__left,
     .unit-text__right {
@@ -39,6 +43,19 @@
     .unit-text__val {
       @include font-size-default(16);
       font-weight: 500;
+    }
+  }
+
+  &--size-large {
+    .unit-text__left,
+    .unit-text__right {
+      @include font-size-head(18);
+      font-weight: 500;
+    }
+
+    .unit-text__val {
+      @include font-size-head(28);
+      font-weight: 900;
     }
   }
 }
