--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -96,6 +96,10 @@ body,
       margin-left: 8px;
     }
 
+    & + &--medium {
+      margin-left: 16px;
+    }
+
     & + &--small {
       margin-left: 4px;
     }
