--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -81,7 +81,7 @@
   }
 
   &--medium-margin {
-    .basic-list__item {
+    > .basic-list__item {
       & + .basic-list__item {
         margin-top: 16px;
       }
