--- a/src/assets/scss/components/ui/form/BoxCheckList.scss
+++ b/src/assets/scss/components/ui/form/BoxCheckList.scss
@@ -12,6 +12,7 @@
     align-items: stretch;
     flex: 1;
     min-width: 0;
+    box-sizing: border-box;
 
     & + & {
       margin-left: 8px;
@@ -29,6 +30,38 @@
       & + .box-check-list__item {
         margin-left: 0;
         margin-top: 8px;
+      }
+    }
+  }
+
+  &--wrap {
+    &::before {
+      content: '';
+      display: table;
+    }
+
+    .box-check-list {
+      &__list {
+        margin: -8px 0 0 -8px;
+        flex-wrap: wrap;
+      }
+
+      &__item {
+        flex: none;
+        width: 50%;
+        padding: 8px 0 0 8px;
+
+        & + .box-check-list__item {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
+  &--col-3 {
+    .box-check-list {
+      &__item {
+        width: 33.333333%;
       }
     }
   }
