--- a/src/assets/scss/views/auto/LayerAutoUsedLoanComplete.scss
+++ b/src/assets/scss/views/auto/LayerAutoUsedLoanComplete.scss
@@ -1,3 +1,5 @@
 @import '@/assets/scss/components/import/basic-list.scss';
-@import '@/assets/scss/components/import/car-image.scss';
-@import '@/assets/scss/components/import/brand-info.scss';
+
+.illust {
+  padding-bottom: 30px;
+}
