--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -74,6 +74,11 @@ body,
   vertical-align: top;
 }
 
+// display-none
+.display-none.display-none {
+  display: none;
+}
+
 // contents-wrap
 .contents-wrap {
   flex: 1;
