--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -24,3 +24,4 @@
 @import '@/assets/scss/components/import/icon-box.scss';
 @import '@/assets/scss/components/import/division-info.scss';
 @import '@/assets/scss/components/import/logs.scss';
+@import '@/assets/scss/components/import/rectal.scss';
