금융사 로고 컴포넌트 추가

--- a/src/assets/scss/components/import/bank-brand.scss
+++ b/src/assets/scss/components/import/bank-brand.scss
@@ -20,7 +20,6 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    text-align: center;
     justify-content: flex-start;
     text-align: center;
     padding: 10px 14px;
@@ -34,16 +33,14 @@
 
   &__logo {
     flex: none;
+    align-self: center;
     display: block;
-    width: 60px;
-    height: 60px;
-    margin: 0 auto 2px;
+    margin-bottom: 2px;
 
-    svg,
-    img {
+    svg {
       display: block;
-      width: 100%;
-      height: 100%;
+      width: 60px;
+      height: 60px;
     }
   }
 
