손님용 > 내대출, 영업용(재고금융), 영업용(LM블로그_개인) 작업중
- 손님용 > 내대출 > 계약현황 (케이스별 디자인 대기중)
- 손님용 > 내대출 > 상세계약현황
- 손님용 > 내대출 > 진행상태조회
- 손님용 > 설정
- 영업용(재고금융) > 중도상환, 만기연장, 종료건 확인
- 영업용(LM블로그_개인) > 홈

--- a/src/assets/scss/views/lm-blog-personal/LMBlogPersonalHome.scss
+++ b/src/assets/scss/views/lm-blog-personal/LMBlogPersonalHome.scss
@@ -1,6 +1,13 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+}
 
 .consulting {
+  grid-column-start: 1;
+  grid-column-end: 3;
   border: 1px solid $color-gray-30;
   border-radius: 12px;
 
@@ -68,21 +75,8 @@
 }
 
 .menu {
-  margin-top: 16px;
-
-  &__inner {
-    display: flex;
-  }
-
-  &__box {
-    flex: 1;
-    border: 1px solid $color-gray-30;
-    border-radius: 12px;
-
-    & + & {
-      margin-left: 16px;
-    }
-  }
+  border: 1px solid $color-gray-30;
+  border-radius: 12px;
 
   &__link {
     display: block;
