flex-box, agree-list 타입추가

--- a/src/assets/scss/components/import/agree-list.scss
+++ b/src/assets/scss/components/import/agree-list.scss
@@ -139,7 +139,11 @@
   }
 
   &__detail {
-    padding: 6px 20px 0 30px;
+    padding: 6px 32px 0 30px;
+
+    &-secondary {
+      padding: 8px 32px 0 30px;
+    }
   }
 
   &__list--secondary {
