--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -101,6 +101,10 @@ body,
       margin-left: 8px;
     }
 
+    & + &--large {
+      margin-left: 20px;
+    }
+
     & + &--medium {
       margin-left: 16px;
     }
