--- a/src/assets/scss/views/auto/LayerAutoSuccessionAssigneeComplete.scss
+++ b/src/assets/scss/views/auto/LayerAutoSuccessionAssigneeComplete.scss
@@ -1,8 +1,5 @@
-@import '@/assets/scss/components/import/car-image.scss';
-@import '@/assets/scss/components/import/brand-info.scss';
-@import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/logs.scss';
 
 .illust {
-  padding-bottom: 0;
+  padding-bottom: 40px;
 }
