--- a/src/assets/scss/views/auto/LayerAutoSuccessionAssigneeLeaseDetail.scss
+++ b/src/assets/scss/views/auto/LayerAutoSuccessionAssigneeLeaseDetail.scss
@@ -1,12 +1,7 @@
-@import '@/assets/scss/components/import/switch-list.scss';
 @import '@/assets/scss/components/import/tooltip-section.scss';
-@import '@/assets/scss/components/import/basic-list.scss';
 
-.basic-list--no-symbol {
-  padding-left: 8px;
-}
-
-.tooltip-icon--small {
+.icon {
+  display: block;
   width: 18px;
   height: 18px;
 }
