--- a/src/assets/scss/components/ui/form/FormList.scss
+++ b/src/assets/scss/components/ui/form/FormList.scss
@@ -3,7 +3,6 @@
 
   &__list {
     position: relative;
-    z-index: 0;
     margin: 0;
     padding: 0;
   }
@@ -83,7 +82,7 @@
   &__item--force-focus,
   &__item--error.form__item--focus {
     .form__title {
-      z-index: -1;
+      z-index: auto;
       @include font-size-default(12);
       min-height: #{$line-height-default}em;
       font-weight: 500;
