데이트 피커 컴포넌트 정렬 기능 추가

--- a/src/assets/scss/components/ui/form/BasicDatepicker.scss
+++ b/src/assets/scss/components/ui/form/BasicDatepicker.scss
@@ -48,6 +48,16 @@
     }
   }
 
+  &--align {
+    &-right {
+      .input {
+        &__text {
+          text-align: right;
+        }
+      }
+    }
+  }
+
   :global {
     .duet-date,
     .duet-date__input-wrapper {
