--- a/src/assets/scss/components/ui/button/ButtonList.scss
+++ b/src/assets/scss/components/ui/button/ButtonList.scss
@@ -6,17 +6,20 @@
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: stretch;
+    justify-content: flex-start;
   }
 
   &__item {
     flex: 1;
     min-width: 0;
-  }
+    box-sizing: border-box;
+    display: flex;
+    align-items: stretch;
 
-  &__item + &__item {
-    margin-left: 8px;
+    & + & {
+      margin-left: 8px;
+    }
   }
 
   &--align-left &__list {
@@ -50,5 +53,37 @@
   &--align-right &__item--flexible,
   &--align-center &__item--flexible {
     flex: 1;
+  }
+
+  &--wrap {
+    &::before {
+      content: '';
+      display: table;
+    }
+
+    .buttons {
+      &__list {
+        margin: -8px 0 0 -8px;
+        flex-wrap: wrap;
+      }
+
+      &__item {
+        flex: none;
+        width: 50%;
+        padding: 8px 0 0 8px;
+
+        & + .buttons__item {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
+  &--col-3 {
+    .buttons {
+      &__item {
+        width: 33.333333%;
+      }
+    }
   }
 }
