--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -31,5 +31,9 @@
       border-color: $color-gray-05;
       background-color: $color-gray-05;
     }
+
+    &-septenary {
+      padding: 12px 16px 10px 16px;
+    }
   }
 }
