--- a/src/assets/scss/components/import/icon-buttons.scss
+++ b/src/assets/scss/components/import/icon-buttons.scss
@@ -8,10 +8,6 @@
 
   &__item {
     display: block;
-
-    & + & {
-      margin-top: 24px;
-    }
   }
 
   &__block {
@@ -19,8 +15,9 @@
     display: flex;
     align-items: center;
     width: 100%;
-    text-align: left;
+    padding: 12px 4px;
     box-sizing: border-box;
+    text-align: left;
 
     &::after {
       content: '';
